13393
I'm not really sure what's going on here, but it looks like a bug. A type parameter T is making its way into a type where T is not in scope. 
```scala
scala> def id[T](x : T) = x
id: [T](T)T

scala> id(_)
typing eta id
res0: (T) => Nothing = <function>

scala> res0(1)
<console>:7: error: type mismatch;
 found   : Int(1)
 required: T
       res0(1)
            ^
```
